--- a/vn30_tf_demo.ipynb
+++ b/vn30_tf_demo.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# VN30 Time Series Prediction with TensorFlow\n",
-    "This notebook loads VN30 stock data, lets you pick a ticker, trains Linear, NLinear, DLinear models, and plots forecasts."
+    "This notebook loads VN30 stock data, lets you pick a ticker, trains Linear, NLinear, DLinear models, and plots forecasts.\n",
+    "# Chạy lần lượt từng cell , thay ticket ở cell cuôi để thay mã stock."
    ]
   },
   {
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "7858eb90",
    "metadata": {},
    "outputs": [
@@ -297,7 +298,7 @@
     "    axes[0].set_yscale(\"log\")\n",
     "    axes[0].grid(True)\n",
     "\n",
-    "    # (B) Prediction Sample (giống paper)\n",
+    "    # (B) Prediction Sample \n",
     "    days = range(PRED_LEN)\n",
     "    y_true_log = np.log(y_true)\n",
     "    p1_log = np.log(p1)\n",
